# ModernCmake

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
Adder/: adder.cpp
